<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TextView 
        android:id="@+id/select_all_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        android:text="@string/picker_all_day"/>

    <LinearLayout
        android:id="@+id/np_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFFFF"
        android:orientation="horizontal"
        android:layout_below="@id/select_all_day"
        android:weightSum="5" >

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/hour_number_picker"
            style="@style/custom_number_picker"
            android:layout_weight="1"
            android:focusable="true" />

        <TextView
            android:id="@+id/select_hour_text"
            style="@style/parking_time_selector_unit_measures_tv"
            android:layout_weight="1"
            android:paddingRight="50dp"
            android:text="@string/main_parking_time_hour_unit" />

        <View
            android:id="@+id/number_picker_separator"
            style="@style/parking_time_vertical_separator"
            android:layout_weight="1" />

        <net.simonvt.numberpicker.NumberPicker
            android:id="@+id/min_number_picker"
            style="@style/custom_number_picker"
            android:layout_weight="1"
            android:focusable="true" />

        <TextView
            android:id="@+id/select_min_text"
            style="@style/parking_time_selector_unit_measures_tv"
            android:layout_weight="1"
            android:text="@string/main_parking_time_minute_unit" />

        <Button
            android:id="@+id/okbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>